# crypto-dashboard

./: .gitignore  README.md  crypto-dashboard  crypto_dashboard.py  install-desktop.sh  pyproject.toml  requirements.txt
data/: crypto-dashboard.desktop
